--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the Events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+th.fixed_width {
+	width: 14vw;
+}
+
+td {
+	&:hover {
+		font-weight: 400;
+		background-color:#ccc !important;
+	}
+}
+td.fixed_size {
+  height: 20vh;
+}
+
+td.past {
+	color: #aaa;
+	background-color:#fafafa;
+}
+td.current {
+	background-color:#dfe;
+}
