--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -20,15 +20,15 @@ pre {
 }
 
 a {
-  color: #000;
+  color: #6b7;
 
   &:visited {
-    color: #666;
+    color: #686;
   }
 
   &:hover {
-    color: #fff;
-    background-color: #000;
+    color: #66b;
+		background-color: transparent !important;
   }
 }
 
@@ -81,4 +81,8 @@ div {
 
 label {
   display: block;
+}
+
+.center {
+	text-align: center;
 }
