--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -1,32 +1,6 @@
-h1.center = "#{@month[:order]}. #{@month[:name]}"
+- year = 0
+- @events.each do |event|
+  - if year < event.year
+    div.row
+      = year = event.year
 
-div.row
-  div.col-xs-1
-    a.btn.btn-success.btn-month href="?month=#{@month.prev_link(@year)}"
-      '<
-  div.col-xs-10
-    table.table.table-bordered.table-responsive
-      thead
-        tr
-          th.fixed_width Moonsday
-          th.fixed_width Twosday
-          th.fixed_width Wanesday
-          th.fixed_width Thirstday
-          th.fixed_width Freeday
-          th.fixed_width Starday
-          th.fixed_width Sunday
-      tbody
-        - for day in 1..@month[:number_of_days]
-          - if (day-1)%7==0
-            tr
-          td.fixed_size class=relative(day, @month.order, @year, @today.day, @today.month, @today.year)
-            div.row
-              div.col-xs-2
-                = day
-            - @events.select {|e| e.day == day}.each do |event|
-              div.row
-                div.col-xs-12
-                  a.event href="/event/#{event.id}" =event.content
-  div.col-xs-1
-      a.btn.btn-success.btn-month href="?month=#{@month.next_link(@year)}"
-        '>
