--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,6 +5,7 @@ html
     title Alar
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag    'application', 'https://fonts.googleapis.com/css?family=Tangerine'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
     div.container-fluid#main-container
