--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -3,6 +3,7 @@ body {
   color: #333;
   margin: 33px;
   font-family: verdana, arial, helvetica, sans-serif;
+	font-family: 'Tangerine', cursive;
   font-size: 13px;
   line-height: 18px;
 }
@@ -81,8 +82,4 @@ div {
 
 label {
   display: block;
-}
-
-.center {
-	text-align: center;
 }
